; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_debug.c_dot_trace_create_node.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_debug.c_dot_trace_create_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.trace_node* }
%struct.trace_node = type { i32 }
%struct.TYPE_5__ = type { i64 }
%struct.dot_trace_ght = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, %struct.TYPE_5__*)* @dot_trace_create_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dot_trace_create_node(%struct.TYPE_6__* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca %struct.dot_trace_ght*, align 8
  %6 = alloca %struct.trace_node*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %4, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to %struct.dot_trace_ght*
  store %struct.dot_trace_ght* %10, %struct.dot_trace_ght** %5, align 8
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load %struct.trace_node*, %struct.trace_node** %12, align 8
  store %struct.trace_node* %13, %struct.trace_node** %6, align 8
  %14 = load %struct.trace_node*, %struct.trace_node** %6, align 8
  %15 = icmp ne %struct.trace_node* %14, null
  br i1 %15, label %16, label %25

16:                                               ; preds = %2
  %17 = load %struct.dot_trace_ght*, %struct.dot_trace_ght** %5, align 8
  %18 = getelementptr inbounds %struct.dot_trace_ght, %struct.dot_trace_ght* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.dot_trace_ght*, %struct.dot_trace_ght** %5, align 8
  %21 = getelementptr inbounds %struct.dot_trace_ght, %struct.dot_trace_ght* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.trace_node*, %struct.trace_node** %6, align 8
  %24 = call i32 @get_graphtrace_node(i32 %19, i32 %22, %struct.trace_node* %23)
  br label %25

25:                                               ; preds = %16, %2
  ret void
}

declare dso_local i32 @get_graphtrace_node(i32, i32, %struct.trace_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
